--- a/soccerGame2/app/src/main/res/layout/activity_team.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_team.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/listview_1"
         android:layout_width="384dp"
         android:layout_height="695dp"
         app:layout_constraintBottom_toBottomOf="parent"
