--- a/soccerGame2/app/src/main/res/layout/activity_main.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,11 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="334dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="247dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
