--- a/soccerGame2/app/src/main/res/layout/activity_standings.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_standings.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".team.StandingsActivity">
 
-    <TextView
-        android:id="@+id/prueba"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
