--- a/soccerGame2/app/src/main/res/layout/list_content.xml
+++ b/soccerGame2/app/src/main/res/layout/list_content.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
+        android:minEms="2"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="POS" />
@@ -18,66 +23,104 @@
         android:id="@+id/team_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="left"
+        android:maxEms="9"
+        android:maxLines="1"
         android:minEms="9"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/position"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/position"
         tools:text="TEAM NAME" />
 
     <TextView
         android:id="@+id/playedGames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/team_name"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/team_name"
         tools:text="PG" />
 
     <TextView
         android:id="@+id/win"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/playedGames"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/playedGames"
         tools:text="W" />
 
     <TextView
         android:id="@+id/draw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/win"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/win"
         tools:text="D" />
 
     <TextView
         android:id="@+id/loss"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/draw"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/draw"
         tools:text="L" />
 
     <TextView
         android:id="@+id/ptos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/loss"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/loss"
         tools:text="PT" />
 
     <TextView
         android:id="@+id/goalsFavor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/ptos"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ptos"
         tools:text="GF" />
 
     <TextView
         android:id="@+id/goalsAgainst"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:gravity="center"
+        android:minEms="1"
+        android:textAllCaps="true"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/goalsFavor"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/goalsFavor"
         tools:text="GA" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
