--- a/soccerGame2/app/src/main/res/layout/list_content.xml
+++ b/soccerGame2/app/src/main/res/layout/list_content.xml
@@ -10,8 +10,9 @@
         android:id="@+id/position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:gravity="center"
         android:minEms="2"
         android:textAllCaps="true"
         android:textColor="#000000"
@@ -24,9 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:maxEms="9"
+        android:maxEms="8"
         android:maxLines="1"
-        android:minEms="9"
+        android:minEms="8"
         android:textAllCaps="true"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/position"
@@ -86,10 +87,11 @@
 
     <TextView
         android:id="@+id/ptos"
-        android:layout_width="wrap_content"
+        android:layout_width="19dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="2dp"
         android:gravity="center"
+        android:maxEms="2"
         android:minEms="1"
         android:textAllCaps="true"
         android:textColor="#000000"
@@ -99,10 +101,11 @@
 
     <TextView
         android:id="@+id/goalsFavor"
-        android:layout_width="wrap_content"
+        android:layout_width="19dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="2dp"
         android:gravity="center"
+        android:maxEms="2"
         android:minEms="1"
         android:textAllCaps="true"
         android:textColor="#000000"
@@ -112,10 +115,11 @@
 
     <TextView
         android:id="@+id/goalsAgainst"
-        android:layout_width="wrap_content"
+        android:layout_width="19dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="2dp"
         android:gravity="center"
+        android:maxEms="2"
         android:minEms="1"
         android:textAllCaps="true"
         android:textColor="#000000"
