--- a/soccerGame2/app/src/main/res/layout/activity_squad.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_squad.xml
@@ -11,6 +11,7 @@
         android:layout_width="531dp"
         android:layout_height="30dp"
         android:background="#00B0FF"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="COACH"
         android:textColor="#000000"
@@ -25,6 +26,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
         android:background="#00B0FF"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="PLAYERS"
         android:textColor="#000000"
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="NAME"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -51,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="TextView"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textView24"
