--- a/soccerGame2/app/src/main/res/layout/activity_standings.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_standings.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:minEms="2"
         android:text="POS"
         android:textColor="#000000"
@@ -30,6 +31,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="8"
         android:text="TEAM"
@@ -42,6 +44,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:text="PL"
@@ -55,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:text="W"
@@ -68,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:text="D"
@@ -81,6 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:text="L"
@@ -94,6 +100,7 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
@@ -108,6 +115,7 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
@@ -122,6 +130,7 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
