--- a/soccerGame2/app/src/main/res/layout/cuadro_dialogo.xml
+++ b/soccerGame2/app/src/main/res/layout/cuadro_dialogo.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="Founded"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -43,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="Shortname"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -65,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="Stadium"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/textView6"
@@ -75,6 +80,7 @@
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="Club Colors"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/textView8"
@@ -86,6 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -98,6 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold"
