--- a/soccerGame2/app/src/main/res/layout/list_content.xml
+++ b/soccerGame2/app/src/main/res/layout/list_content.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="2"
         android:textAllCaps="true"
@@ -23,6 +25,8 @@
         android:id="@+id/team_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="left"
         android:maxEms="8"
         android:maxLines="1"
@@ -37,6 +41,8 @@
         android:id="@+id/playedGames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:textAllCaps="true"
@@ -50,6 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:textAllCaps="true"
@@ -63,6 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:textAllCaps="true"
@@ -76,6 +86,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:minEms="1"
         android:textAllCaps="true"
@@ -89,6 +101,8 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
@@ -103,6 +117,8 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
@@ -117,6 +133,8 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:maxEms="2"
         android:minEms="1"
