--- a/soccerGame2/app/src/main/res/layout/list_squad_content.xml
+++ b/soccerGame2/app/src/main/res/layout/list_squad_content.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="Name:"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="TextView"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textView19"
@@ -33,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="Position:"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -44,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="TextView"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textView21"
