--- a/soccerGame2/app/src/main/res/layout/activity_squad.xml
+++ b/soccerGame2/app/src/main/res/layout/activity_squad.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView23"
         android:layout_width="531dp"
         android:layout_height="30dp"
-        android:background="#00B0FF"
+        android:background="#D3D3D3"
         android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="COACH"
@@ -25,7 +25,7 @@
         android:layout_width="531dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:background="#00B0FF"
+        android:background="#D3D3D3"
         android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="PLAYERS"
